--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -402,6 +402,16 @@
   title  = {Mean Variance Portfolio Theory},
   url    = {https://www.kent.ac.uk/learning/documents/slas-documents/mean-variance-portfolio.pdf}
 }
+@article{Kiran2022,
+  abstract = {Reinforcement learning (RL) applications, where an agent can simply learn optimal behaviors by interacting with the environment, are quickly gaining tremendous success in a wide variety of applications from controlling simple pendulums to complex data centers. However, setting the right hyperparameters can have a huge impact on the deployed solution performance and reliability in the inference models, produced via RL, used for decision-making. Hyperparameter search itself is a laborious process that requires many iterations and computationally expensive to find the best settings that produce the best neural network architectures. In comparison to other neural network architectures, deep RL has not witnessed much hyperparameter tuning, due to its algorithm complexity and simulation platforms needed. In this paper, we propose a distributed variable-length genetic algorithm framework to systematically tune hyperparameters for various RL applications, improving training time and robustness of the architecture, via evolution. We demonstrate the scalability of our approach on many RL problems (from simple gyms to complex applications) and compared with Bayesian approach. Our results show that with more generations, optimal solutions that require fewer training episodes and are computationally cheap while being more robust for deployment. Our results are imperative to advance deep reinforcement learning controllers for real-world problems.},
+  author   = {Mariam Kiran and Melis Ozyildirim},
+  keywords = {deep RL,evolutionary approaches,hyperparameter tuning},
+  month    = {1},
+  title    = {Hyperparameter Tuning for Deep Reinforcement Learning Applications},
+  url      = {https://arxiv.org/abs/2201.11182v1},
+  year     = {2022},
+  journal  = {arXiv preprint arXiv:2201.11182}
+}
 @article{Lei2020,
   abstract  = {Algorithmic trading is a continuous perception and decision making problem, where environment perception requires to learn feature representation from highly non-stationary and noisy financial time series, and decision making requires the algorithm to explore the environment and simultaneously make correct decisions in an online manner without any supervised information. To address these two problems, we propose a time-driven feature-aware jointly deep reinforcement learning model (TFJ-DRL) that integrates deep learning model and reinforcement learning model to improve the financial signal representation learning and action decision making in algorithmic trading. Concretely, we learn the environmental representation by adaptively selecting and re-weighting various features of financial signals and summarize the attention values between historical information and changing trend depending on the current state. Besides, the supervised deep learning and reinforcement learning are jointly and iteratively trained to make full use of the supervised signals in the training data, and obtain more update information and stricter loss function constraints, thereby increasing investment returns. TFJ-DRL is evaluated on real-world financial data with different price trends (rising, falling and no obvious direction). A series of analysis show the robust superiority and the extensive applicability of the proposed method.},
   author    = {Kai Lei and Bing Zhang and Yu Li and Min Yang and Ying Shen},
@@ -902,6 +912,13 @@
   note   = {Software available from wandb.com},
   url    = {https://www.wandb.com/},
   author = {Biewald, Lukas}
+}
+@misc{WANDBSweep,
+  author = {Weights & Biases Documentation},
+  month  = {8},
+  title  = {Sweep configuration options },
+  url    = {https://docs.wandb.ai/guides/sweeps/sweep-config-keys/},
+  year   = {2025}
 }
 @misc{WeightsBiases2025,
   author  = {Weights & Biases},
